--- a/EduTune/Home/Home.storyboard
+++ b/EduTune/Home/Home.storyboard
@@ -39,7 +39,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7n3-Ft-ddN">
                                 <rect key="frame" x="0.0" y="52" width="390" height="60"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_user_blue" translatesAutoresizingMaskIntoConstraints="NO" id="wMX-Sw-cUz">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_user_blue" translatesAutoresizingMaskIntoConstraints="NO" id="wMX-Sw-cUz">
                                         <rect key="frame" x="16" y="0.0" width="52" height="52"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="52" id="bmZ-Pz-NQh"/>
